# lad_rs

./: Cargo.toml  README.md  pyproject.toml
.env/: pyvenv.cfg
src/: lib.rs
src/binarization/: binarize.rs  mod.rs  rule_generation.rs
