[package]
name = "lad_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lad_rs"
# crate-type = ["cdylib"]

[dependencies]
itertools = "0.13.0"
polars = "0.43.1"
polars-plan = "0.43.1"
rayon = "1.10.0"
